--- a/ProjektGrafika/ProjektGrafika.vcxproj
+++ b/ProjektGrafika/ProjektGrafika.vcxproj
@@ -110,7 +110,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>..\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opengl32.lib;glew32s.lib;glew32.lib;glfw3.lib;glfw3dll.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>freetype.lib;opengl32.lib;glew32s.lib;glew32.lib;glfw3.lib;glfw3dll.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,6 +132,7 @@
   <ItemGroup>
     <ClCompile Include="asteroid.cpp" />
     <ClCompile Include="cube.cpp" />
+    <ClCompile Include="fontHelper.cpp" />
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ModelContext.cpp" />
@@ -142,7 +143,9 @@
   <ItemGroup>
     <ClInclude Include="asteroid.h" />
     <ClInclude Include="asteroidProps.h" />
+    <ClInclude Include="character.h" />
     <ClInclude Include="cube.h" />
+    <ClInclude Include="fontHelper.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="ModelContext.h" />
     <ClInclude Include="SceneHelper.h" />
@@ -152,9 +155,11 @@
   <ItemGroup>
     <None Include="f_shader.glsl" />
     <None Include="f_simple_shader.glsl" />
+    <None Include="f_text_shader.glsl" />
     <None Include="packages.config" />
     <None Include="v_shader.glsl" />
     <None Include="v_simple_shader.glsl" />
+    <None Include="v_text_shader.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
